# QConvert

./: CMakeLists.txt  README
src/: main.cpp  qconvert.cpp  qconvert.h  qconvert.ui
src/About/: about.cpp  about.h
